TODO
* TODO: libfvalue_value_write_to_file_stream
* update smraw.net bindings
* why is empty information value section written in info file

* complete libfvalue and test information file read/write
* configure validate libuna and libbfio check
* close segment file handle on writing when full?
* check if information file is handled correctly on close/free

Features
* allow set of segment filename during write (as alternative writing locations)
* add read and write random functions
* implement write resume
* glob of .1ofN for PREFIX (without the initial extension to help the glob function)

Tooling
* detect maximum possible segment size on file system (e.g. FAT)

smraw.net
* implement other functions ?
* in examples print exception/backtrace on error

Test
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add glob test to msvscpp project

20130420
* smrawmount added -X option

20130405
* updated dependencies

20130404
* textual changes
* updated dependencies

20130403
* changes due to libmfdata and libfdata merge

20130402
* changes due to libmfdata and libfdata merge
* removed libsmraw_legacy

20130401
* updated dependencies
* changes due to libmfdata and libfdata merge

20130321
* 2013 update
* updated dependencies
* changes due to libmfdata and libfdata merge

20121216
* changes due to libmfdata and libfdata merge

20121201
* updated dependencies
* changes due to libmfcache and libfcache merge
* changes due to libmfdata and libfdata merge

20120923
* updated dependencies
* updates msvscpp files

20120712
* updated dependencies

20120701
* updated dependencies
* libcsplit update

20120630
* updated dependencies

20120519
* updated dependencies
* disabled borland codegear files
* added smrawmount destroy

20120212
* small changes

20120209
* added dpkg files
* updated libnotify, libbfio, libfvalue

20120102
* 2012 update

20111231
* updated libhmac
* updated msvscpp and codegear files
